# learning_game_design_patterns

./: README.md  game.js  index.html  inputHandler.js  obstacle.js  player.js
ggez_infinite_runner/: Cargo.toml  README.md
ggez_infinite_runner/src/: button.rs  command_trait.rs  commands.rs  entity.rs  event_system.rs  game_loop.rs  game_state.rs  input_handler.rs  jump_command.rs  lib.rs  main.rs  obstacle.rs  player.rs  reset_game_command.rs  score.rs  tree.rs  tree_model.rs
ggez_runner_2/: Cargo.toml  game_data.json
ggez_runner_2/src/: camera.rs  draw.rs  errors.rs  game_data.rs  game_object.rs  grid.rs  interface.rs  lib.rs  main.rs  meshes.rs  physics.rs  states.rs  types.rs
p5_infinite_runner/: README.md  drawPlane.js  entity.js  eventSystem.js  game.js  gameState.js  globals.js  index.html  inputHandler.js  obstacle.js  package-lock.json  package.json  player.js  tree-data.js  tree.js  world.js
p5_infinite_runner/playground/: observer.js
p5_infinite_runner/states/: jumping_state.js  standing_state.js
p5_infinite_runner/tests/: input-handler.spec.js
p5_runner_2/: camera.js  drawModule.js  eventSystem.js  game.js  gameData.js  gameObject.js  grid.js  index.html  interface.js  level-editor.html  package-lock.json  package.json  physicsModules.js
playground/: command.js
playgrounds/: double_buffer.js  game_loop.js  state_pattern.js  update_method.js
playgrounds/bytecode/: bytecode.js  bytecode.rs  interperter.js  interpreter.rs
playgrounds/component/: component.js
playgrounds/data_locality/: data-locality.js
(+51 files in other folders)
