[package]
name = "ggez_runner_2"
version = "0.1.0"
authors = ["Brooks Patton <brooks@brookzerker.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }